--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <body>
 <header>
     <nav class="navbar">
-
-        <a href="#" class="logo"> LOGO</a>
-        <ul class="nav-menu">
+           <img id="logo" src="liben.png" alt="libention" srcset="">
+            <ul class="nav-menu">
         <li class="nav-item"> 
             <a href="#" class="nav-link"> Home </a>
         </li>
@@ -37,7 +36,7 @@
     </nav>
 </header>
 <section id="firstpage">
-    <div> <h1>estate website</h1> </div>
+    <div> <h1>libention estate</h1> </div>
     <div
     id="btn"
     >
